--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
 		"@typescript-eslint/parser": "^5.31.0",
 		"electron": "^19.0.9",
 		"electron-packager": "^15.5.1",
+		"electron-reload": "^2.0.0-alpha.1",
 		"eslint": "^8.20.0",
 		"eslint-plugin-sonarjs": "^0.14.0",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-		"js-yaml": "^4.1.0"
+		"js-yaml": "^4.1.0",
+		"node-unrar-js": "^2.0.0"
 	}
 }
