--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"target": "ES2015",
+		"module": "CommonJS",
 		"noImplicitAny": true,
 		"sourceMap": true,
 		"outDir": "dist",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["src/*"],
 			"*": ["node_modules/*"]
-		}
+		},
+		"esModuleInterop": true
 	},
 	"include": ["src/**/*"]
 }
