--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
-  "name": "mhr-mod-manager",
-  "version": "1.0.0",
-  "description": "Monster Hunter Rise Mod Manager for FirstNative",
-  "main": "./dist/main.js",
+  "name": "electron-vue-template",
+  "version": "0.1.0",
+  "description": "A minimal Electron + Vue application",
+  "main": "build/main/main.js",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "dev": "npm run build && electron ./dist/main.js",
-    "pack": "rm -r target && electron-packager . MHR-Mod-Manager --prune --ignore=\\.ts$ --out=target --platform=win32 --arch=x64 && cp src/config.default.yml target/MHR-Mod-Manager-win32-x64/config.yml"
+    "dev": "node scripts/dev-server.js",
+    "build": "node scripts/build.js && electron-builder -c config/electron-builder.json",
+    "build:win": "node scripts/build.js && electron-builder -c config/electron-builder.json --win",
+    "build:mac": "node scripts/build.js && electron-builder -c config/electron-builder.json --mac",
+    "build:linux": "node scripts/build.js && electron-builder -c config/electron-builder.json --linux",
+    "lint": "eslint --ext .ts,.tsx,.js,.vue src/"
   },
-  "repository": "https://github.com/electron/electron-quick-start-typescript",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
-    "typescript"
-  ],
+  "repository": "https://github.com/deluze/electron-vue-template",
+  "author": {
+    "name": "Deluze",
+    "url": "https://github.com/Deluze"
+  },
   "devDependencies": {
-    "@types/feather-icons": "^4.7.0",
-    "@types/js-yaml": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "electron": "^19.0.9",
-    "electron-packager": "^15.5.1",
-    "electron-reload": "^2.0.0-alpha.1",
-    "eslint": "^8.20.0",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/cli": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "autoprefixer": "^10.4.8",
+    "chokidar": "^3.5.3",
+    "colors": "^1.4.0",
+    "electron": "^19.0.10",
+    "electron-builder": "^23.3.3",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-sonarjs": "^0.14.0",
-    "typescript": "^4.7.4"
+    "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4"
   },
   "dependencies": {
-    "feather-icons": "^4.29.0",
     "js-yaml": "^4.1.0",
-    "node-unrar-js": "^2.0.0"
+    "node-unrar-js": "^2.0.0",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   }
 }
