--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal Electron + Vue application",
   "main": "build/main/main.js",
   "scripts": {
+    "tsc": "vue-tsc -p src/main/tsconfig.json --strict --noEmit && vue-tsc -p src/renderer/tsconfig.json --strict --noEmit",
     "dev": "node scripts/dev-server.js",
     "build": "node scripts/build.js && electron-builder -c config/electron-builder.json",
     "build:win": "node scripts/build.js && electron-builder -c config/electron-builder.json --win",
@@ -39,13 +40,16 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4",
-    "vite": "^3.0.4"
+    "vite": "^3.0.4",
+    "vue-tsc": "^0.39.5"
   },
   "dependencies": {
+    "feather-icons": "^4.29.0",
     "js-yaml": "^4.1.0",
     "node-unrar-js": "^2.0.0",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
+    "vue-feather": "^2.0.0",
     "vue-router": "^4.1.3"
   }
 }
