--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "feather-icons": "^4.29.0",
+    "fs-extra": "^10.1.0",
     "js-yaml": "^4.1.0",
     "node-unrar-js": "^2.0.0",
     "pinia": "^2.0.17",
